--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Ignore arquivos de build e desenvolvimento locais
 *.pyc
 __pycache__/
 *.pyo
@@ -12,8 +11,7 @@ dist/
 .venv
 env/
 venv/
-
-# Ignore arquivos antigos/duplicados
+render.yaml
 app_web.py
 run.py
 test_xml.py
